syntax = "proto3";

package services;

import "types.proto";

service RPCService {
  rpc SendMessage(RpcMessage) returns (RpcResponse);
}

message IntentMessage{
  types.Intent intent = 1;
  string topic = 2;
}

message SubscribeTopicMessage{
  string topic = 2;
}

message RpcMessage {
  oneof message {
    IntentMessage intent = 1;
    SubscribeTopicMessage topic = 2;
    types.Dkg dkg = 3;
  }
}

message RpcResponse {
  string result = 1;
}
