// TODO proto3 requires all value to be optional, it's a bit annoying
syntax = "proto3";

// TODO Tonic generate an empty file for this import, can it be removed or clean ?
import "google/protobuf/timestamp.proto";

package types;

message Tx {
  bytes code = 1;
  optional bytes data = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message Intent {
  bytes data = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message IntentGossipMessage{
  oneof msg {
    Intent intent = 1;
  }
}

message Dkg {
  string data = 1;
}

message DkgGossipMessage{
  oneof dkg_message {
    Dkg dkg = 1;
  }
}
